{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 85,
  "lineage": "b5b1efc2-377e-d002-fd9d-80334cd89229",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a159627069d916f2",
            "domain": "vpc",
            "id": "eipalloc-04e365db2e208e031",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e045f717281a629",
            "private_dns": "ip-10-0-2-246.ec2.internal",
            "private_ip": "10.0.2.246",
            "public_dns": "ec2-54-243-100-67.compute-1.amazonaws.com",
            "public_ip": "54.243.100.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ACS-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:353928175117:instance/i-0ecdaacd869f44889",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ecdaacd869f44889",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "example-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-006ea6187ca4f7e39",
            "private_dns": "ip-10-0-2-219.ec2.internal",
            "private_ip": "10.0.2.219",
            "public_dns": "ec2-44-211-58-101.compute-1.amazonaws.com",
            "public_ip": "44.211.58.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3903245a3db1b79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ea0ab3c9ef94f95",
            "tags": {
              "Name": "ACS-Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0566195410eca12fa"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:353928175117:instance/i-00f6c5184056ee01b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f6c5184056ee01b",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "example-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b0f21b82235d210b",
            "private_dns": "ip-10-0-2-121.ec2.internal",
            "private_ip": "10.0.2.121",
            "public_dns": "ec2-44-200-38-56.compute-1.amazonaws.com",
            "public_ip": "44.200.38.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042cc44c55799f305",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ea0ab3c9ef94f95",
            "tags": {
              "Name": "ACS-artifactory"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0566195410eca12fa"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonbarqube",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:353928175117:instance/i-09554dc3298496f94",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09554dc3298496f94",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "example-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0adcdb4b4321be38e",
            "private_dns": "ip-10-0-2-21.ec2.internal",
            "private_ip": "10.0.2.21",
            "public_dns": "ec2-54-160-9-43.compute-1.amazonaws.com",
            "public_ip": "54.160.9.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07cbb76209ce43567",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ea0ab3c9ef94f95",
            "tags": {
              "Name": "ACS-sonbarqube"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0566195410eca12fa"
            ]
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:internet-gateway/igw-004761d1f26b8abd4",
            "id": "igw-004761d1f26b8abd4",
            "owner_id": "353928175117",
            "tags": {
              "Name": "ACS-vpc-068e54b3711162285-IG!"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ACS-ext-alb/3ce7016940f85e97",
            "arn_suffix": "app/ACS-ext-alb/3ce7016940f85e97",
            "dns_name": "ACS-ext-alb-292330553.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ACS-ext-alb/3ce7016940f85e97",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ACS-ext-alb",
            "security_groups": [
              "sg-0566195410eca12fa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014d25e8439083fa3"
              },
              {
                "subnet_id": "subnet-04ea0ab3c9ef94f95"
              }
            ],
            "subnets": [
              "subnet-014d25e8439083fa3",
              "subnet-04ea0ab3c9ef94f95"
            ],
            "tags": {
              "Name": "ACS-ext-alb"
            },
            "vpc_id": "vpc-068e54b3711162285",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ialb/37ad58eaf4e58e25",
            "arn_suffix": "app/ialb/37ad58eaf4e58e25",
            "dns_name": "internal-ialb-673171983.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ialb/37ad58eaf4e58e25",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-084cc459f9888c403"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d23c83e8d20878c"
              },
              {
                "subnet_id": "subnet-050dbe15fc7d22df1"
              }
            ],
            "subnets": [
              "subnet-00d23c83e8d20878c",
              "subnet-050dbe15fc7d22df1"
            ],
            "tags": {
              "Name": "ACS-int-alb"
            },
            "vpc_id": "vpc-068e54b3711162285",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ACS-ext-alb/3ce7016940f85e97/d8c987950fc80a82",
            "certificate_arn": "arn:aws:acm:us-east-1:353928175117:certificate/c0be8bcb-e3ed-410f-ad98-04f36182cc59",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/nginx-tgt/158283f7f6de75f9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ACS-ext-alb/3ce7016940f85e97/d8c987950fc80a82",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ACS-ext-alb/3ce7016940f85e97",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.ALB.aws_acm_certificate.mytoolings",
            "module.ALB.aws_acm_certificate_validation.mytoolings",
            "module.ALB.aws_lb.ext-alb",
            "module.ALB.aws_lb_target_group.nginx-tgt",
            "module.ALB.aws_route53_record.mytoolings",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ialb/37ad58eaf4e58e25/8de34cb6949ca19d",
            "certificate_arn": "arn:aws:acm:us-east-1:353928175117:certificate/c0be8bcb-e3ed-410f-ad98-04f36182cc59",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/wordpress-tgt/3fbf1bf661941639",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ialb/37ad58eaf4e58e25/8de34cb6949ca19d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/ialb/37ad58eaf4e58e25",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.ALB.aws_acm_certificate.mytoolings",
            "module.ALB.aws_acm_certificate_validation.mytoolings",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.mytoolings",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/david-tooling-tgt/f237b9784dd444f5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener-rule/app/ialb/37ad58eaf4e58e25/8de34cb6949ca19d/3ceca7348c5fb525",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.mytoolings.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener-rule/app/ialb/37ad58eaf4e58e25/8de34cb6949ca19d/3ceca7348c5fb525",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/ialb/37ad58eaf4e58e25/8de34cb6949ca19d",
            "priority": 99
          },
          "dependencies": [
            "module.ALB.aws_acm_certificate.mytoolings",
            "module.ALB.aws_acm_certificate_validation.mytoolings",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_listener.web-listener",
            "module.ALB.aws_lb_target_group.tooling-tgt",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.mytoolings",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/nginx-tgt/158283f7f6de75f9",
            "arn_suffix": "targetgroup/nginx-tgt/158283f7f6de75f9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/nginx-tgt/158283f7f6de75f9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/david-tooling-tgt/f237b9784dd444f5",
            "arn_suffix": "targetgroup/david-tooling-tgt/f237b9784dd444f5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/david-tooling-tgt/f237b9784dd444f5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "david-tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-068e54b3711162285"
          }
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/wordpress-tgt/3fbf1bf661941639",
            "arn_suffix": "targetgroup/wordpress-tgt/3fbf1bf661941639",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/wordpress-tgt/3fbf1bf661941639",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e365db2e208e031",
            "id": "nat-0f76d877c16a6993e",
            "network_interface_id": "eni-02e045f717281a629",
            "private_ip": "10.0.2.246",
            "public_ip": "54.243.100.67",
            "subnet_id": "subnet-04ea0ab3c9ef94f95",
            "tags": {
              "Name": "ACS-Nat"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-004761d1f26b8abd4",
            "id": "r-rtb-0e6b6820b76cb1dd21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6b6820b76cb1dd2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:route-table/rtb-0bb0c25fbbc47c5ca",
            "id": "rtb-0bb0c25fbbc47c5ca",
            "owner_id": "353928175117",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Private-Route-Table"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:route-table/rtb-0e6b6820b76cb1dd2",
            "id": "rtb-0e6b6820b76cb1dd2",
            "owner_id": "353928175117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004761d1f26b8abd4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ACS-Public-Route-Table"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c4c9d460ec37a8",
            "route_table_id": "rtb-0bb0c25fbbc47c5ca",
            "subnet_id": "subnet-00d23c83e8d20878c"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf72718bd57421b1",
            "route_table_id": "rtb-0bb0c25fbbc47c5ca",
            "subnet_id": "subnet-050dbe15fc7d22df1"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9580cb96e9edbeb",
            "route_table_id": "rtb-0bb0c25fbbc47c5ca",
            "subnet_id": "subnet-018b81f5412b49241"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085dc77e1fab9b7bd",
            "route_table_id": "rtb-0bb0c25fbbc47c5ca",
            "subnet_id": "subnet-0aaa793816f82e189"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3c7c286434ceef0",
            "route_table_id": "rtb-0e6b6820b76cb1dd2",
            "subnet_id": "subnet-04ea0ab3c9ef94f95"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0145ee71897429919",
            "route_table_id": "rtb-0e6b6820b76cb1dd2",
            "subnet_id": "subnet-014d25e8439083fa3"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ACS",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-07cc969a4f9f2e038",
            "description": "for bastion instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cc969a4f9f2e038",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "datalayer-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0eacf57b519d929cd",
            "description": "data layer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eacf57b519d929cd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07963645c2ad9def2"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07963645c2ad9def2",
                  "sg-07cc969a4f9f2e038"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "ext-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0566195410eca12fa",
            "description": "for external loadbalncer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0566195410eca12fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "int-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-084cc459f9888c403",
            "description": "IALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084cc459f9888c403",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a78043c18ec1444d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "nginx-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0a78043c18ec1444d",
            "description": "nginx instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a78043c18ec1444d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07cc969a4f9f2e038"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0566195410eca12fa"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "webserver-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-07963645c2ad9def2",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07963645c2ad9def2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07cc969a4f9f2e038"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084cc459f9888c403"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2857063293",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0566195410eca12fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3469791052",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0566195410eca12fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-843520874",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a78043c18ec1444d",
            "self": false,
            "source_security_group_id": "sg-07cc969a4f9f2e038",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-63357863",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-084cc459f9888c403",
            "self": false,
            "source_security_group_id": "sg-0a78043c18ec1444d",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2204971841",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eacf57b519d929cd",
            "self": false,
            "source_security_group_id": "sg-07cc969a4f9f2e038",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-4096904924",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eacf57b519d929cd",
            "self": false,
            "source_security_group_id": "sg-07963645c2ad9def2",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-1744264790",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eacf57b519d929cd",
            "self": false,
            "source_security_group_id": "sg-07963645c2ad9def2",
            "to_port": 2049,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2428922825",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a78043c18ec1444d",
            "self": false,
            "source_security_group_id": "sg-0566195410eca12fa",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ssh-bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2195797021",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07cc969a4f9f2e038",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2087737975",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07963645c2ad9def2",
            "self": false,
            "source_security_group_id": "sg-084cc459f9888c403",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2235890664",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07963645c2ad9def2",
            "self": false,
            "source_security_group_id": "sg-07cc969a4f9f2e038",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.security.aws_security_group.ACS"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-00d23c83e8d20878c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00d23c83e8d20878c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Name": "ACS-PrivateSubnet-2!"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-2!"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-050dbe15fc7d22df1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-050dbe15fc7d22df1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Name": "ACS-PrivateSubnet-3!"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-3!"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-018b81f5412b49241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-018b81f5412b49241",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Name": "ACS-PrivateSubnet-4!"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-4!"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0aaa793816f82e189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0aaa793816f82e189",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Name": "ACS-PrivateSubnet-5!"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-5!"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-04ea0ab3c9ef94f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04ea0ab3c9ef94f95",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Name": "ACS-PublicSubnet-0!"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-0!"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-014d25e8439083fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-014d25e8439083fa3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "tags": {
              "Name": "ACS-PublicSubnet-1!"
            },
            "tags_all": {
              "Name": "ACS-PublicSubnet-1!"
            },
            "vpc_id": "vpc-068e54b3711162285"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:vpc/vpc-068e54b3711162285",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5e57a9e5c2448db",
            "default_route_table_id": "rtb-004a81bb40c748042",
            "default_security_group_id": "sg-0cdf2e987e5853645",
            "dhcp_options_id": "dopt-0ff179fee1ba4567e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-068e54b3711162285",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-004a81bb40c748042",
            "owner_id": "353928175117"
          }
        }
      ]
    }
  ]
}